Change html title; Change package.json app title

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Boilerplate",
+  "name": "BudgetFYI",
   "version": "1.0.0",
   "description": "A decision making app built in react",
   "main": "index.js",
