Change app description in package.json

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "BudgetFYI",
   "version": "1.0.0",
-  "description": "A decision making app built in react",
+  "description": "A budgeting app built in react",
   "main": "index.js",
   "author": "Nathaniel Rand",
   "license": "MIT",
