--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "css-loader": "0.28.4",
     "express": "4.15.4",
     "extract-text-webpack-plugin": "3.0.0",
-    "firebase": "7.1.0",
+    "firebase": "^7.9.3",
     "history": "4.7.2",
     "moment": "2.18.1",
     "node-sass": "^4.13.0",
