--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "build:prod": "webpack -p --env production",
     "dev-server": "webpack-dev-server",
     "test": "cross-env NODE_ENV=test jest --config=jest.config.json",
-    "start": "node server/server.js",
+    "start": "HTTPS=true&&node server/server.js",
     "heroku-postbuild": "yarn run build:prod"
   },
   "dependencies": {
